--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                   </div>
                   <div class="media__body">
                     <h3 class="media_title quote_author">John Smith</h3>
-                    <p class="quote__organization">ABC Company</p>
+                    <p class="quote__organization">WM Company</p>
                   </div>
                 </div>
               </footer>
@@ -511,7 +511,7 @@
         <!--  -->
         <div class="footer__brand">
           <img src="images/logo.svg" alt="" />
-          <p class="footer__copyright">Copyright 2020 Mosh Hamedani</p>
+          <p class="footer__copyright">Copyright 2023 Walee_kM</p>
         </div>
       </div>
     </footer>
